--- a/game.HTML
+++ b/game.HTML
@@ -21,10 +21,12 @@
         </nav>
     </header>
 
-  <body>
-    <h1>JavaScript Quiz Game</h1>
-    <p>You will have 75 seconds to answer 5 JavaScript related questions. Each incorrect answer will decrease the time by 15 seconds. Click the Start button below to begin.</p>
-    <button id="start">Start</button>
-    <script src="app.js"></script>
-  </body>
-</html>
+    <body>
+        <h1 id="question">Which of the following isn't a type of loop?</h1>
+        <button id="a">While</button>
+        <button id="b">Switch</button>
+        <button id="c">For</button>
+        <button id="d">Do... While</button>
+        <p id="result"></p>
+        <script src="game.js"></script>
+    </body>
