--- a/index.HTML
+++ b/index.HTML
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">View High Scores</a>
+                    <a href="highscores.html">View High Scores</a>
                 </li>
                 <li>
                     <p id = "time">Time: 75</p>
