minor css changes and bug fix

--- a/game.HTML
+++ b/game.HTML
@@ -22,11 +22,13 @@
     </header>
 
     <body>
+        <section>
         <h1 id="question">Which of the following isn't a type of loop?</h1>
         <button id="a">While</button>
         <button id="b">Switch</button>
         <button id="c">For</button>
         <button id="d">Do... While</button>
         <p id="result"></p>
+        </section>
         <script src="game.js"></script>
     </body>
